# archival

./: .gitignore  archival_vision.md  project.yml
Archival.xcodeproj/: project.pbxproj
Archival/Sources/: ArchivalEntry.swift
archival-app/: Package.swift
archival-app/Libs/macos/: libarchival_core.dylib
archival-app/Scripts/: build-rust.sh
archival-app/Sources/ArchivalCore/: ArchivalAI.swift  ArchivalDB.swift  ArchivalError.swift  ArchivalItem.swift
archival-app/Sources/ArchivalUI/: AddItemView.swift  ArchivalApp.swift  ContentView.swift  ItemDetailView.swift  ItemListView.swift  SettingsView.swift
archival-app/Sources/CArchivalCore/: module.modulemap
archival-app/Tests/ArchivalCoreTests/: RoundtripTests.swift
archival-core/: Cargo.toml  build.rs  cbindgen.toml
archival-core/include/: archival.h
archival-core/migrations/: v1.sql  v2.sql
archival-core/src/: error.rs  ffi.rs  lib.rs
archival-core/src/ai/: classifier.rs  http.rs  mod.rs  specialist.rs
archival-core/src/categories/: definitions.rs  mod.rs
archival-core/src/db/: mod.rs  ops.rs  schema.rs
