[package]
name = "archival-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "archival_core"
crate-type = ["cdylib", "staticlib"]

[dependencies]
libsqlite3-sys = { version = "0.30", features = [] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
ureq = { version = "2", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
tempfile = "3"
